<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridDemo01</string>
    <string name="title_activity_dash_board_">DashBoard</string>
    <string name="hello_world">Hello world!</string>
    <string name="todo">TODO</string>
    <string name="Description">Description</string>
    <string name="title_activity_grir_view_">GrirView_Activity</string>
    <string name="one">Request</string>
    <string name="two">Login</string>
    <string name="back">Go Back</string>
    <string name="title_activity_list_item_">ListItem_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_view_">LoginView_Activity</string>
    
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="accountid">Account ID</string>
	<string name="login">Login</string>
</resources>
