<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="showToast"
            android:text="@string/one"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="showToast"
            android:text="@string/two" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="showToast"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>